added extra node to firebase app

--- a/index.html
+++ b/index.html
@@ -41,5 +41,54 @@
         return false;
     }
 </script>
+
+<!-- form two -->
+<div class="contact">
+    <h2 class="contact-title">Send us a message</h2>
+    <p id="contact-success" class="text-success lead"></p>
+    <p id="contact-error" class="text-danger lead"></p>
+    <form class="contact-form" id="contact-form" role="form" onsubmit="return sendMessage(this)">
+        <input class="form-control" name="name" type="text" placeholder="Your name. eg., Joe" required>
+        <input class="form-control" name="email" type="email" placeholder="Your email. eg., joe@acme.com" required>
+        <textarea class="form-control" name="message" placeholder="Your message for us" rows="5" required></textarea>
+        <select class="form-control" name="gender">
+        	<option value="male">Male</option>
+        	<option value="female">female</option>
+        </select>
+        <br />
+        <button class="btn btn-success pull-right" id="send-button" type="submit" >Send Message</button>
+    </form>
+</div>
+
+<!-- javascript -->
+<script>
+    // Send message
+    var contactFrom = document.getElementById('contact-form');
+    var contactSuccess = document.getElementById('contact-success');
+    var contactError = document.getElementById('contact-error');
+    var sendBtn = document.getElementById('send-button');
+    var onMessageComplete = function(error) {
+      sendBtn.disabled = false;
+      if (error) {
+        contactError.innerHTML = 'Sorry. Could not send message.';
+      } else {
+        contactSuccess.innerHTML = "Message has been sent.";
+        // hide the form
+        contactFrom.style.display = 'none';
+      }
+    };
+    function sendMessage(formObj) {
+        // Store emails to firebase
+        var myFirebaseRef = new Firebase("https://healthdata.firebaseio.com/messages");
+        myFirebaseRef.push({
+          name: formObj.name.value,
+          email: formObj.email.value,
+          message: formObj.message.value,
+          gender: formObj.gender.value
+        }, onMessageComplete);
+        sendBtn.disabled = true;
+        return false;
+    }
+</script>
 </body>
 </html>
