added bootstrap framework

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title></title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- for-mobile-view -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Firebase Data Manipulation</title>
 <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
+<div class="container" id="wrapper">
 	<div class="signup">
     <h2 class="signup-title">Sign up for beta</h2>
     <p id="signup-success" class="text-success"></p>
@@ -90,5 +96,8 @@
         return false;
     }
 </script>
+</div>
+<script src="js/bootstrap.min.css"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
 </body>
 </html>
